welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: unclosed character literal
    if (direction == 'gauche') {
                            ^ZigZag:23: error: unclosed character literal
        direction = 'droite'
                           ^ZigZag:26: error: unclosed character literal
    if (direction == 'droite') {
                            ^ZigZag:35: error: unclosed character literal
        direction = 'gauche'
                           ^ZigZag:14: error: ')' expected but something found.
    if (direction == 'gauche') {
                            ^